<resources>
    <string name="app_name">Minhas Vendas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resumo">Resumo</string>
    <string name="pedidos">Pedidos</string>
    <string name="total_de_vendas">Total de vendas</string>
    <string name="reais_value">"R$ %1$s"</string>
    <string name="no_order_saved">Nenhum pedido cadastrado</string>
    <string name="order_number">Nº do pedido</string>
    <string name="client">Cliente</string>
    <string name="order_total_value">Valor total do pedido</string>
    <string name="order_info_title">Informações do pedido</string>
    <string name="card_order_number_title">Número do pedido</string>
    <string name="registered_items">Itens cadastrados</string>
    <string name="item_quantity">Quantidade de itens</string>
    <string name="no_item_registered">Nenhum item cadastrado</string>
    <string name="qtde">Qtde</string>
    <string name="unitary_value">Valor unitário</string>
    <string name="total_value">Valor total</string>
    <string name="cancel">Cancelar</string>
    <string name="save_order">Salvar pedido</string>
    <string name="edit_order">Editar pedido</string>
    <string name="number_zero">0</string>
    <string name="include_item">Incluir item</string>
    <string name="total_item_value">Valor total do item</string>
    <string name="register">Cadastrar</string>
    <string name="register_item">Cadastrar item</string>
    <string name="item">Item</string>
    <string name="client_name">Nome do cliente</string>
</resources>