<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardItemOrder"
        style="@style/MinhasVendas.CardOrder"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:clickable="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/order_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/MinhasVendas.TextCardOrder" />

            <TextView
                android:id="@+id/textOrderNumberValue"
                style="@style/MinhasVendas.TextCardOrderValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/textClientValue"
                app:layout_constraintStart_toStartOf="@+id/textOrderNumber"
                app:layout_constraintTop_toBottomOf="@+id/textOrderNumber"
                tools:text="897342" />

            <TextView
                android:id="@+id/textClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/client"
                app:layout_constraintStart_toEndOf="@+id/textOrderNumber"
                app:layout_constraintTop_toTopOf="@+id/textOrderNumber"
                style="@style/MinhasVendas.TextCardOrder" />

            <TextView
                android:id="@+id/textClientValue"
                style="@style/MinhasVendas.TextCardOrderValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textClient"
                app:layout_constraintTop_toTopOf="@+id/textOrderNumberValue"
                tools:text="Manny Paquiao" />

            <View
                android:id="@+id/horizontalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textClientValue" />

            <TextView
                android:id="@+id/textOrderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/order_total_value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
                style="@style/MinhasVendas.TextCardOrder" />

            <TextView
                android:id="@+id/textOrderTotalValue"
                style="@style/MinhasVendas.TextCardOrderValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/reais_value"
                android:textAlignment="textEnd"
                app:layout_constraintBottom_toBottomOf="@+id/textOrderTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textOrderTotal"
                app:layout_constraintTop_toTopOf="@+id/textOrderTotal"
                tools:text="R$ 1000,00" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>